Changed remove shortcut to ctrl+shift+remove

--- a/dude-graph.html
+++ b/dude-graph.html
@@ -359,7 +359,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                     dudeGraphElement.get("renderer").createRenderGroupForSelection();
                     e.preventDefault();
                 });
-                jwerty.key("delete/backspace", function (e) {
+                jwerty.key("ctrl+shift+delete/ctrl+shift+backspace/⌘+shift+delete/⌘+shift+backspace", function (e) {
                     if (dudeGraphElement.get("renderer").removeSelection()) {
                         e.preventDefault();
                     }
