--- a/demo/audigame/audigame.html
+++ b/demo/audigame/audigame.html
@@ -5,6 +5,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 <link rel="import" href="../../../iron-localstorage/iron-localstorage.html">
 <link rel="import" href="../../../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../dude-graph.html">
+<script src="builder.js"></script>
 <script src="data.js"></script>
 <!--
 `audigame` is a Polymer element to wrap a dude-graph demo
@@ -116,6 +117,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             _save: function (e) {
                 this.set("graphData", e.detail.graphData);
                 this.set("rendererData", e.detail.rendererData);
+                console.log(JSON.stringify(new CelestoryBuilder(this.$.context.get("graph")).build(), null, ' '));
             }
         });
     </script>
