--- a/panels/dude-graph-create.html
+++ b/panels/dude-graph-create.html
@@ -4,6 +4,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 <link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../dude-hierarchy/dude-hierarchy.html">
+<link rel="import" href="../../dude-toolbar/dude-toolbar.html">
+<link rel="import" href="../../dude-collapse/dude-collapse.html">
 <!--
 `dude-graph-create` is a panel used to add a new blocks/variables to the graph.
 
@@ -13,21 +15,23 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 -->
 <dom-module id="dude-graph-create">
     <style>
-        :host {
-            @apply(--layout-vertical);
-            @apply(--layout-flex);
-            padding: 10px;
+        .toolbar {
+            margin-top: 16px;
+            margin-bottom: 16px;
         }
     </style>
     <template>
-        <dude-hierarchy
-                style="height: 100%; overflow: scroll"
-                id="modelsHierarchy"
-                placeholder="Search block..."
-                items="{{ data.models }}"
-                on-dude-hierarchy-item-submit="_createBlock">
-        </dude-hierarchy>
-        <button on-click="_save">Save</button>
+        <div class="toolbar">
+            <dude-toolbar id="toolbar"></dude-toolbar>
+        </div>
+        <dude-collapse heading="Create block">
+            <dude-hierarchy
+                    id="modelsHierarchy"
+                    placeholder="Search block..."
+                    items="{{ data.models }}"
+                    on-dude-hierarchy-item-submit="_createBlock">
+            </dude-hierarchy>
+        </dude-collapse>
     </template>
     <script>
         /**
@@ -52,28 +56,58 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * Notifies the dude-stack
              */
             attached: function () {
+                var panel = this;
+                this.$.toolbar.set("commands", []); // TODO: debug why commands are "global"
+                this.$.toolbar.addCommand({
+                    icon: "fa fa-save",
+                    description: "Save graph",
+                    shortcut: ["ctrl+s", "meta+s"],
+                    action: function () {
+                        panel._save();
+                    }.bind(this)
+                });
+                this.$.toolbar.addCommand({
+                    icon: "fa fa-play",
+                    description: "Build graph",
+                    shortcut: ["ctrl+b", "meta+b"],
+                    action: function () {
+                        panel._build();
+                    }.bind(this)
+                });
+                this.$.toolbar.addCommand({
+                    icon: "fa fa-compress",
+                    description: "Zoom to fit",
+                    shortcut: ["ctrl+0", "meta+0"],
+                    action: function () {
+                        panel.get("data").get("renderer").zoomToFit();
+                    }.bind(this)
+                });
                 this.fire("dude-inspector-attached");
             },
 
             /**
              * Called when the panel is opened
              */
-            opened: function () {},
+            opened: function () {
+            },
 
             /**
              * Called when the panel is the top of the stack
              */
-            resumed: function () {},
+            resumed: function () {
+            },
 
             /**
              * Called when the panel is not anymore the top of the stack
              */
-            paused: function () {},
+            paused: function () {
+            },
 
             /**
              * Called when the panel is closed
              */
-            closed: function () {},
+            closed: function () {
+            },
 
             /**
              * Creates the block from the selected model
@@ -92,6 +126,14 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              */
             _save: function () {
                 this.get("data").emitSave();
+            },
+
+            /**
+             * Builds the graph and renderer
+             * @private
+             */
+            _build: function () {
+                this.get("data").emitBuild();
             }
         });
     </script>
