--- a/panels/dude-graph-edit-variable.html
+++ b/panels/dude-graph-edit-variable.html
@@ -3,7 +3,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 -->
 <link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout.html">
-<link rel="import" href="../../paper-button/paper-button.html">
+<link rel="import" href="../../dude-toolbar/dude-toolbar.html">
+<link rel="import" href="../../dude-collapse/dude-collapse.html">
 <link rel="import" href="../../dude-property/dude-property.html">
 <!--
 `dude-graph-edit-variable` is a panel used to add a new group to the graph.
@@ -20,43 +21,89 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             overflow: auto;
             padding: 10px;
         }
+        .toolbar {
+            margin-top: 16px;
+            margin-bottom: 16px;
+        }
     </style>
     <template>
-        <dude-property property-name="Variable type"
-                       property-type="Choice"
-                       property-value="{{ data.block.blockOutputs.0.pointValueType }}"
-                       property-choices="{{ _types }}"
-                       no-menu>
-        </dude-property>
-        <dude-property property-name="Variable name"
-                       property-type="String"
-                       property-value="{{ data.block.blockName }}"
-                       no-menu>
-        </dude-property>
-        <dude-property property-name="Variable value"
-                       property-type="{{ data.block.blockOutputs.0.pointValueType }}"
-                       property-value="{{ data.block.blockOutputs.0.pointValue }}">
-        </dude-property>
+        <div class="toolbar">
+            <dude-toolbar id="toolbar"></dude-toolbar>
+        </div>
+        <dude-collapse heading="[[ data.block.blockName ]]">
+            <dude-property property-name="Variable type"
+                           property-type="Choice"
+                           property-value="{{ data.block.blockOutputs.0.pointValueType }}"
+                           property-choices="{{ _types }}"
+                           no-menu>
+            </dude-property>
+            <dude-property property-name="Variable name"
+                           property-type="String"
+                           property-value="{{ data.block.blockName }}"
+                           no-menu>
+            </dude-property>
+            <dude-property property-name="Variable value"
+                           property-type="{{ data.block.blockOutputs.0.pointValueType }}"
+                           property-value="{{ data.block.blockOutputs.0.pointValue }}">
+            </dude-property>
+        </dude-collapse>
     </template>
     <script>
         Polymer({
             is: "dude-graph-edit-variable",
 
             properties: {
-                data: {
-                    type: Object
+                "data": {
+                    "type": "DudeGraphElement",
+                    "readonly": true
+                },
+                "panelTitle": {
+                    "type": String,
+                    "value": "Edit block",
+                    "readonly": true
                 }
             },
 
-            ready: function () {
+            /**
+             * Called when the panel is attached to the DOM
+             * Notifies the dude-stack
+             */
+            attached: function () {
                 this.set("_types", ["String", "Number", "Boolean", "Object", "Resource"]);
-                this.set("");
+                var panel = this;
+                this.$.toolbar.set("commands", []); // TODO: debug why commands are "global"
+                this.$.toolbar.addCommand({
+                    icon: "fa fa-compress",
+                    description: "Zoom to selection",
+                    shortcut: ["ctrl+0", "meta+0"],
+                    action: function () {
+                        panel.get("data").get("renderer").zoomToFitSelection();
+                    }.bind(this)
+                });
+                this.$.toolbar.addCommand({
+                    icon: "fa fa-trash",
+                    description: "Remove selection",
+                    shortcut: ["ctrl+delete", "meta+backspace"],
+                    action: function () {
+                        panel.get("data").get("renderer").removeSelection();
+                    }.bind(this)
+                });
+                this.fire("dude-inspector-attached");
             },
 
+            /**
+             *
+             * @returns {*}
+             * @private
+             */
             _validate: function () {
                 return this.get("_variableName") && this.get("_variableType") && this.get("_variableValue");
             },
 
+            /**
+             *
+             * @private
+             */
             _editButtonClicked: function () {
                 if (this._validate()) {
                     console.log(this.get("_variableName"),
