--- a/dude-graph.html
+++ b/dude-graph.html
@@ -409,6 +409,10 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * @property {Function} saveGraphData
              * @property {Function} saveRendererData
              * @property {Function} save
+             * @property {Function} emitSave
+             * @property {Function} emitBuild
+             * @property {Function} get
+             * @property {Function} set
              */
         });
     </script>
