--- a/panels/dude-graph-edit-block.html
+++ b/panels/dude-graph-edit-block.html
@@ -7,6 +7,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 <link rel="import" href="../../dude-toolbar/dude-toolbar.html">
 <link rel="import" href="../../dude-collapse/dude-collapse.html">
 <link rel="import" href="../../dude-property/dude-property.html">
+<script src="dude-graph-toolbar.js"></script>
 <!--
 `dude-graph-edit-block` is a panel used to add a new blocks/variables to the graph.
 
@@ -67,38 +68,12 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * Notifies the dude-stack
              */
             attached: function () {
-                var panel = this;
-                this.$.toolbar.set("commands", []); // TODO: debug why commands are "global"
-                this.$.toolbar.addCommand({
-                    icon: "fa fa-compress",
-                    description: "Zoom to selection",
-                    shortcut: ["ctrl+0", "meta+0"],
-                    action: function () {
-                        panel.get("data").get("renderer").zoomToFitSelection();
-                    }.bind(this)
-                });
-                this.$.toolbar.addCommand({
-                    icon: "fa fa-trash",
-                    description: "Remove selection",
-                    shortcut: ["ctrl+delete", "meta+backspace"],
-                    action: function () {
-                        panel.get("data").get("renderer").removeSelection();
-                    }.bind(this)
-                });
-                this.$.toolbar.addCommand({
-                    icon: "fa fa-object-group",
-                    description: "Group selection",
-                    shortcut: ["ctrl+g", "meta+g"],
-                    action: function () {
-                        panel.get("data").get("renderer").createRenderGroupForSelection("Group");
-                    }.bind(this)
-                });
+                dudeGraph.ToolbarHelper.clearToolbar(this);
+                dudeGraph.ToolbarHelper.zoomToSelection(this);
+                dudeGraph.ToolbarHelper.removeSelection(this);
+                dudeGraph.ToolbarHelper.groupSelection(this);
                 this.fire("dude-inspector-attached");
             },
-
-            ready: function () {
-
-        },
 
             /**
              * Called when the panel is opened
