--- a/panels/dude-inspector.html
+++ b/panels/dude-inspector.html
@@ -290,6 +290,9 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
          * @property {Function} resumed
          * @property {Function} paused
          * @property {Function} closed
+         * @property {Function} get
+         * @property {Function} set
+         * @property {Object} $
          */
     </script>
 </dom-module>
