--- a/panels/dude-graph-edit-block.html
+++ b/panels/dude-graph-edit-block.html
@@ -47,7 +47,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
     </template>
     <script>
         /**
-         * @extends {DudeStackItemElement}
+         * @extends {DudeInspectorItemElement}
          */
         Polymer({
             is: "dude-graph-edit-block",
