Added create variable panel, implementation not done

--- a/dude-graph.html
+++ b/dude-graph.html
@@ -281,6 +281,14 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             },
 
             /**
+             * Creates a variable from the given variableData
+             * @param {Object} variableData
+             */
+            createVariable: function (variableData) {
+                throw new Error("not yet implemented", variableData);
+            },
+
+            /**
              * Saves the graph data
              * @returns {Object}
              */
