--- a/panels/dude-graph-create.html
+++ b/panels/dude-graph-create.html
@@ -42,7 +42,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             is: "dude-graph-create",
             properties: {
                 "inspector": {
-                    "type": "",
+                    "type": "DudeInspectorElement",
                     "readonly": true
                 },
                 "data": {
