--- a/panels/dude-graph-edit-block.html
+++ b/panels/dude-graph-edit-block.html
@@ -52,6 +52,10 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         Polymer({
             is: "dude-graph-edit-block",
             properties: {
+                "inspector": {
+                    "type": "DudeInspectorElement",
+                    "readonly": true
+                },
                 "data": {
                     "type": "DudeGraphElement",
                     "readonly": true
