--- a/panels/dude-graph-edit-group.html
+++ b/panels/dude-graph-edit-group.html
@@ -42,6 +42,10 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         Polymer({
             is: "dude-graph-edit-group",
             properties: {
+                "inspector": {
+                    "type": "DudeInspectorElement",
+                    "readonly": true
+                },
                 "data": {
                     "type": "DudeGraphElement",
                     "readonly": true
