--- a/panels/dude-graph-edit-variable.html
+++ b/panels/dude-graph-edit-variable.html
@@ -51,8 +51,11 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
     <script>
         Polymer({
             is: "dude-graph-edit-variable",
-
             properties: {
+                "inspector": {
+                    "type": "DudeInspectorElement",
+                    "readonly": true
+                },
                 "data": {
                     "type": "DudeGraphElement",
                     "readonly": true
